@@ -1,3 +1,10 @@
+2015-03-18  Camille Scott  <camille.scott.w@gmail.com>
+
+    * lib/{hashtable.hh,counting.hh}: Add array of locks and a new
+    counting function for thread-safe writing to the counting table
+    * khmer/_khmermodule.cc: Expose new functionality to python
+    * tests/test_counting_hash.py: Tests for thread-safety
+
 2015-03-16  Jessica Mizzi  <mizzijes@msu.edu>
 
     * khmer/kfile.py: Added file not existing error for system exit
